# robot_decapsuleur_ws

./: .gitignore  README.md
src/darknet_detector/: CMakeLists.txt  README.md  package.xml
src/darknet_detector/darknet_files/: coco.data  darknet.py
src/darknet_detector/launch/: camera_detector.launch
src/darknet_detector/msg/: Object.msg
src/darknet_detector/scripts/: camerasim.py  camerasim_srv.py  detector.py  find_object.py
src/darknet_detector/srv/: ObjectInfo.srv
src/robot_decapsuleur/: CMakeLists.txt  package.xml
src/robot_decapsuleur/launch/: robot.launch
src/robot_decapsuleur/scripts/: robot.py  rotate_camera.py
src/robot_decapsuleur/stl/: Rotating_plate.STL
src/robot_decapsuleur/urdf/: robot.urdf  rviz.rviz
src/robot_decapsuleur_controller/: CMakeLists.txt  package.xml
src/robot_decapsuleur_controller/config/: joints_trajectory_controller.yaml  tilt.yaml
src/robot_decapsuleur_controller/launch/: controller_manager.launch  start_meta_controller.launch
src/robot_decapsuleur_controller/scripts/: state_publisher.py
src/robot_decapsuleur_description/: CMakeLists.txt  package.xml
src/robot_decapsuleur_description/launch/: robot_controller.launch  rviz.launch
src/robot_decapsuleur_description/stl/: Rotating_plate.dae  arm.dae  base_plate-1.dae  base_plate-2.dae  bottle_opener.dae  bottle_opener.stl  bottle_opener_support.dae
src/robot_decapsuleur_description/urdf/: robot.urdf  robot.urdf.xacro  (+1 more)
src/robot_decapsuleur_lidar/: CMakeLists.txt  package.xml
src/robot_decapsuleur_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+27 files in other folders)
